<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondoencostruccion"
    tools:context=".IniciarSesion">

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconoconstruccion" />

    <EditText
        android:id="@+id/correoElectronico"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_redondos"
        android:hint="Correo eléctronico"
        android:digits="abcdefghijklmnñopqrstuvwxyz0123456789-_@."
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView18" />

    <EditText
        android:id="@+id/Editcontrasena"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_redondos"
        android:hint="Contraseña"
        android:inputType="textPassword"
        android:digits="abcdefghijklmnñopqrstuvwxyABCDEFGHIJKLMNÑOPQRSTUVWXYZ0123456789"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/correoElectronico" />


    <Button
        android:id="@+id/buttonIniciarSesion"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:background="@drawable/botones_redondos"
        android:onClick="login"
        android:text="@string/ButtonIniciarSesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Editcontrasena" />

    <TextView
        android:id="@+id/EresNuevo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="40dp"
        android:text="@string/TextViewEresNuevo"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/RegistrateAqui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIniciarSesion" />

    <TextView
        android:id="@+id/RegistrateAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/TextViewRegistrateAqui"
        android:onClick="RegistrateAqui"
        android:textColor="@color/botton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EresNuevo"
        app:layout_constraintTop_toBottomOf="@+id/buttonIniciarSesion" />

    <TextView
        android:id="@+id/OlvidasteContrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:text="@string/TextViewOlvidasteContrasena"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/PulsaAqui"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EresNuevo" />

    <TextView
        android:id="@+id/PulsaAqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:onClick="Construccion"
        android:text="@string/TextViewPulsarAqui"
        android:textColor="@color/botton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/OlvidasteContrasena"
        app:layout_constraintTop_toBottomOf="@+id/RegistrateAqui" />


</androidx.constraintlayout.widget.ConstraintLayout>