<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trasparente"
    tools:context=".ProductoDeCampo">


    <ImageView
        android:id="@+id/imageAscensorBarra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barranegra" />

    <ImageView
        android:id="@+id/imageAscensorPerfil"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="300dp"
        android:onClick="iniciarSesion"
        app:layout_constraintEnd_toEndOf="@+id/imageAscensorBarra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageAscensorBarra"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageAscensorChat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="230dp"
        android:onClick="contactenos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageAscensorBarra"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mensaje"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="122dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="110dp"
        android:onClick="miEspacio"
        app:layout_constraintEnd_toEndOf="@+id/imageAscensorBarra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageAscensorBarra"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/estrella"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="502dp"
        android:layout_marginTop="200dp"
        android:onClick="construccion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/barraamarilla"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="250dp"
        android:onClick="Volver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAscensorPerfil"
        app:srcCompat="@drawable/volver"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView53"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageAscensorBarra"
        app:srcCompat="@drawable/logodiario" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="70dp"
        android:text="Productor"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView53" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="de campo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView53" />

    <ImageView
        android:id="@+id/imageView54"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/iamgenvideo" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="30dp"
        android:onClick="construccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/flechamayor"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="300dp"
        android:onClick="construccion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView54"
        app:srcCompat="@drawable/flechamenor"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageAscensorMenu"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="315dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:onClick="ascensor"
        app:layout_constraintEnd_toEndOf="@+id/imageAscensorBarra"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tres_lineas"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/TextViewInfoProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/TextViewRequisitos"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewR1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="@string/TextViewR2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:text="@string/TextViewR3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="10dp"
        android:text="@string/TextViewR4"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />



</androidx.constraintlayout.widget.ConstraintLayout>